--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -46,6 +46,8 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/, role: ROLE_USER }
 
 when@test:
     security:
